--- a/src/app/placeholder/placeholder.component.html
+++ b/src/app/placeholder/placeholder.component.html
@@ -1,4 +1,4 @@
-<div id="placeholder-container">
+<div id="placeholder-container" class="container-fluid">
   <h1 id="placeholder-title" class="placeholder-text">Page Under Construction</h1>
   <div id="placeholder-description" class="placeholder-text">
     <span class="avoid-wrap">
