--- a/src/app/placeholder/placeholder.component.css
+++ b/src/app/placeholder/placeholder.component.css
@@ -4,13 +4,14 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
-    width: 100%;
     background-image: url('../../assets/img/material-placeholder.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
     background-size: cover;
-    color: white;    
 }
 
 .placeholder-text {
+    color: white;
     text-align: center;
     z-index: 3;
     opacity: 0.9;
@@ -18,8 +19,4 @@
 
 #placeholder-title {
     padding: 8px;
-}
-
-#placeholder-description {
-    font-size: 2rem;
 }
