--- a/src/app/placeholder/placeholder.component.html
+++ b/src/app/placeholder/placeholder.component.html
@@ -1,12 +1,5 @@
 <div id="placeholder-container" class="container-fluid">
   <h1 id="placeholder-title" class="placeholder-text">Page Under Construction</h1>
-  <div id="placeholder-description" class="placeholder-text">
-    <span class="avoid-wrap">
-      Please contact Kian Boon
-    </span>
-    <span class="avoid-wrap">
-      &nbsp;directly if you have any queries
-    </span>
-  </div>
+  <h4 class="placeholder-text">Please contact Kian Boon directly if you have any queries</h4>
 </div>
 <div class="overlay"></div>
