implement nav top bar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<app-placeholder></app-placeholder>
+<app-nav-top-bar></app-nav-top-bar>
+<div class="container-fluid">
+    <h1 class="jumbotron">
+        Test Test
+    </h1>
+</div>
+<!-- <app-placeholder></app-placeholder> -->
