update nav top bar component

--- a/src/app/nav-top-bar/nav-top-bar.component.html
+++ b/src/app/nav-top-bar/nav-top-bar.component.html
@@ -4,10 +4,11 @@
   </div>
 
   <div class="d-none d-sm-block" id="top-bar-nav">
-    <button mat-button>Basic</button>
-    <button mat-button>Basic</button>
-    <button mat-button>Basic</button>
-    <button mat-button>Basic</button>
+    <button mat-button>About Me</button>
+    <button mat-button>Experience</button>
+    <button mat-button>Projects</button>
+    <button mat-button>Achievements</button>
+    <button mat-button>About This Page</button>
   </div>
 
   <div class="d-sm-none" id="top-bar-menu-icon-container">
@@ -17,10 +18,11 @@
   </div>
 
   <div class="d-sm-none" id="top-bar-menu" [ngClass]="isExpand ? 'menu-expanded' : 'menu-minimized'">
-    <a class="top-bar-menu-item">Basic</a>
-    <a class="top-bar-menu-item">Basic</a>
-    <a class="top-bar-menu-item">Basic</a>
-    <a class="top-bar-menu-item">Basic</a>
+    <a class="top-bar-menu-item">About Me</a>
+    <a class="top-bar-menu-item">Experience</a>
+    <a class="top-bar-menu-item">Projects</a>
+    <a class="top-bar-menu-item">Achievements</a>
+    <a class="top-bar-menu-item">About This Page</a>
   </div>
 
 </mat-toolbar>
