--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,3 @@
 <app-nav-top-bar></app-nav-top-bar>
-<div class="container-fluid">
-    <h1 class="jumbotron">
-        Test Test
-    </h1>
-</div>
+<router-outlet></router-outlet>
 <!-- <app-placeholder></app-placeholder> -->
