--- a/src/app/shared/styles.css
+++ b/src/app/shared/styles.css
@@ -1,3 +1,9 @@
+::ng-deep :root {
+    --primary: #3f51b5;
+    --accent: #ff4081; 
+    --warn: #f44336; 
+}
+
 .overlay {
     height: 100%;
     width: 100%;
