implement experience component

--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -1,3 +1,85 @@
-<p>
-  experience works!
-</p>
+<div class="container page-container">
+  <div class="experience-header">
+    <div class="row">
+      <div class="col-lg-9">
+        <h1 class="display-1 page-header-title d-none d-sm-block">Experience</h1>
+        <h1 class="display-3 page-header-title d-sm-none">Experience</h1>
+        <!-- <mat-card class="image-card">
+          <img mat-card-image src="../../assets/img/material-placeholder.jpg" alt="placeholder">
+        </mat-card> -->
+      </div>
+      <!-- <div class="col-lg-3 d-none d-sm-block">Links to different list items</div> -->
+    </div>
+  </div>
+
+  <mat-divider></mat-divider>
+
+  <div class="experience-body">
+    <div id="asia-risk-transfer-solutions" class="row item-container">
+      <div class="col-lg-9">
+        <div class="item-header">
+          <h1 class="display-4">Asia Risk Transfer Solutions, SG</h1>
+          <h4 class="lead company-role">Technology Analyst</h4>
+          <p class="lead">Aug 2017 - Present</p>
+        </div>
+        <mat-card class="image-card">
+          <img mat-card-image class="pad-image" src="../../assets/img/arts.png" alt="asia risk transfer solutions">
+        </mat-card>
+        <div class="item-content">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer tempus risus sed enim condimentum, id consectetur augue
+          pretium. Aenean iaculis neque mauris. Morbi mollis condimentum leo at porttitor. Vivamus scelerisque ultricies
+          egestas. Aliquam eget erat eu urna sodales dapibus cursus et sapien. Quisque eget justo sed nisi porta porta. Cras
+          tristique ornare mi, eget ultricies nisi rutrum nec. Vivamus bibendum urna vitae sagittis ultricies. Vestibulum
+          lectus odio, varius in laoreet non, pellentesque in leo. Nulla pretium arcu purus, et blandit arcu aliquam nec.
+          In placerat turpis quis libero ultricies tempus. Vestibulum facilisis porttitor euismod. Vivamus pharetra aliquam
+          nulla sit amet laoreet. Sed libero felis, posuere a viverra eget, facilisis quis justo. Integer sollicitudin mollis
+          porttitor. Donec pulvinar, enim a accumsan luctus, ipsum arcu fringilla risus, ut ornare turpis velit id dolor.
+        </div>
+      </div>
+    </div>
+
+    <mat-divider></mat-divider>
+
+    <div id="codigo" class="row item-container">
+      <div class="col-lg-9">
+        <div class="item-header">
+          <h1 class="display-4">Codigo, SG</h1>
+          <h4 class="lead company-role">Intern Android Developer</h4>
+          <p class="lead">May - Aug 2017</p>
+        </div>
+        <mat-card class="image-card">
+          <img mat-card-image src="../../assets/img/fast-fast.jpeg" alt="fast fast">
+        </mat-card>
+        <div class="item-content">
+          <p>Android Development on FastFast Android version 2. FastFast is an affordable courier for urgent delivery service.
+            Collaborated with UI/UX designers and other developers to implement functional requirements and improve existing
+            functionalities. Java, SQL and XML in Android Studio was used.</p>
+          <p>Software Architect for FastFast Android version 2. Designed and implemented FastFast Android version 2’s software
+            architecture, which includes refactoring of legacy code and implementing code for new features.</p>
+          <p>User Acceptance Test for FastFast Web version 2.</p>
+        </div>
+      </div>
+    </div>
+
+    <mat-divider></mat-divider>
+
+    <div id="msd" class="row item-container">
+      <div class="col-lg-9">
+        <div class="item-header">
+          <h1 class="display-4">MSD, NJ</h1>
+          <h4 class="lead company-role">Intern Web Developer</h4>
+          <p class="lead">May – Jul 2016</p>
+        </div>
+        <mat-card class="image-card">
+          <img mat-card-image class="pad-image" src="../../assets/img/msd.svg" alt="msd">
+        </mat-card>
+        <div class="item-content">
+          <p>Front End Web Development on M-code Lookup tool and EDRC/LDRC Document Search Tool. Both are ASP.NET web application
+            for internal Merck use. HTML, CSS, JavaScript and C# in Microsoft Visual Studio were used.</p>
+          <p>Front End Development for Microsoft SharePoint using HTML, CSS and JavaScript.</p>
+          <p>Technical evaluation of business proposals for Merck for Mothers initiative.</p>
+        </div>
+      </div>
+    </div>
+
+  </div>
