--- a/src/app/nav-top-bar/nav-top-bar.component.html
+++ b/src/app/nav-top-bar/nav-top-bar.component.html
@@ -1,6 +1,7 @@
 <mat-toolbar color="primary">
   <div id="logo-container">
-    <span>Application Title</span>
+    <mat-icon>face</mat-icon>
+    <span class="logo-title">Ken's Material</span>
   </div>
 
   <div class="d-none d-md-block" id="top-bar-nav">
