update remove placehold test in experience component

--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -26,14 +26,14 @@
           <img mat-card-image class="pad-image" src="../../assets/img/arts.png" alt="asia risk transfer solutions">
         </mat-card>
         <div class="item-content">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer tempus risus sed enim condimentum, id consectetur augue
+          <!-- Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer tempus risus sed enim condimentum, id consectetur augue
           pretium. Aenean iaculis neque mauris. Morbi mollis condimentum leo at porttitor. Vivamus scelerisque ultricies
           egestas. Aliquam eget erat eu urna sodales dapibus cursus et sapien. Quisque eget justo sed nisi porta porta. Cras
           tristique ornare mi, eget ultricies nisi rutrum nec. Vivamus bibendum urna vitae sagittis ultricies. Vestibulum
           lectus odio, varius in laoreet non, pellentesque in leo. Nulla pretium arcu purus, et blandit arcu aliquam nec.
           In placerat turpis quis libero ultricies tempus. Vestibulum facilisis porttitor euismod. Vivamus pharetra aliquam
           nulla sit amet laoreet. Sed libero felis, posuere a viverra eget, facilisis quis justo. Integer sollicitudin mollis
-          porttitor. Donec pulvinar, enim a accumsan luctus, ipsum arcu fringilla risus, ut ornare turpis velit id dolor.
+          porttitor. Donec pulvinar, enim a accumsan luctus, ipsum arcu fringilla risus, ut ornare turpis velit id dolor. -->
         </div>
       </div>
     </div>
@@ -83,3 +83,4 @@
     </div>
 
   </div>
+</div>
