remove overlay in placeholder

--- a/src/app/placeholder/placeholder.component.html
+++ b/src/app/placeholder/placeholder.component.html
@@ -2,4 +2,4 @@
   <h1 id="placeholder-title" class="placeholder-text">Page Under Construction</h1>
   <h4 class="placeholder-text">Please contact Kian Boon directly if you have any queries</h4>
 </div>
-<div class="overlay"></div>
+<!-- <div class="overlay"></div> -->
