update image path

--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -5,7 +5,7 @@
         <h1 class="display-1 page-header-title d-none d-sm-block">Experience</h1>
         <h1 class="display-3 page-header-title d-sm-none">Experience</h1>
         <!-- <mat-card class="image-card">
-          <img mat-card-image src="./../../assets/img/material-placeholder.jpg" alt="placeholder">
+          <img mat-card-image src="../../assets/img/material-placeholder.jpg" alt="placeholder">
         </mat-card> -->
       </div>
       <!-- <div class="col-lg-3 d-none d-sm-block">Links to different list items</div> -->
@@ -23,7 +23,7 @@
           <p class="lead">Aug 2017 - Present</p>
         </div>
         <mat-card class="image-card">
-          <img mat-card-image class="pad-image" src="./../../assets/img/arts.png" alt="asia risk transfer solutions">
+          <img mat-card-image class="pad-image" src="./../assets/img/arts.png" alt="asia risk transfer solutions">
         </mat-card>
         <div class="item-content">
           <!-- Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer tempus risus sed enim condimentum, id consectetur augue
@@ -48,7 +48,7 @@
           <p class="lead">May - Aug 2017</p>
         </div>
         <mat-card class="image-card">
-          <img mat-card-image src="./../../assets/img/fast-fast.jpeg" alt="fast fast">
+          <img mat-card-image src="./../assets/img/fast-fast.jpeg" alt="fast fast">
         </mat-card>
         <div class="item-content">
           <p>Android Development on FastFast Android version 2. FastFast is an affordable courier for urgent delivery service.
@@ -71,7 +71,7 @@
           <p class="lead">May – Jul 2016</p>
         </div>
         <mat-card class="image-card">
-          <img mat-card-image class="pad-image" src="./../../assets/img/msd.svg" alt="msd">
+          <img mat-card-image class="pad-image" src="./../assets/img/msd.svg" alt="msd">
         </mat-card>
         <div class="item-content">
           <p>Front End Web Development on M-code Lookup tool and EDRC/LDRC Document Search Tool. Both are ASP.NET web application
