update top nav ui responsiveness

--- a/src/app/nav-top-bar/nav-top-bar.component.html
+++ b/src/app/nav-top-bar/nav-top-bar.component.html
@@ -4,7 +4,7 @@
     <span class="logo-title">Ken's Material</span>
   </div>
 
-  <div class="d-none d-md-block" id="top-bar-nav">
+  <div class="d-none d-lg-block" id="top-bar-nav">
     <button mat-flat-button routerLink="/about-me" color="primary" routerLinkActive="active">About Me</button>
     <button mat-flat-button routerLink="/experience" color="primary" routerLinkActive="active">Experience</button>
     <button mat-flat-button routerLink="/projects" color="primary" routerLinkActive="active">Projects</button>
@@ -12,11 +12,11 @@
     <button mat-flat-button routerLink="/about-this-page" color="primary" routerLinkActive="active">About This Page</button>
   </div>
 
-  <button mat-button id="dropdown-menu-button" class="d-md-none btn" data-toggle='dropdown' aria-haspopup="true" aria-expanded="false">
+  <button mat-button id="dropdown-menu-button" class="d-lg-none btn" data-toggle='dropdown' aria-haspopup="true" aria-expanded="false">
     <mat-icon>menu</mat-icon>
   </button>
 
-  <div class="d-md-none dropdown-menu" id="top-bar-menu" aria-labelledby="dropdown-menu-button">
+  <div class="d-lg-none dropdown-menu" id="top-bar-menu" aria-labelledby="dropdown-menu-button">
     <a class="top-bar-menu-item dropdown-item" routerLink="/about-me" routerLinkActive="active">About Me</a>
     <a class="top-bar-menu-item dropdown-item" routerLink="/experience" routerLinkActive="active">Experience</a>
     <a class="top-bar-menu-item dropdown-item" routerLink="/projects" routerLinkActive="active">Projects</a>
