update placeholder component

--- a/src/app/placeholder/placeholder.component.html
+++ b/src/app/placeholder/placeholder.component.html
@@ -1,5 +1,6 @@
 <div id="placeholder-container" class="container-fluid">
-  <h1 id="placeholder-title" class="placeholder-text">Page Under Construction</h1>
-  <h4 class="placeholder-text">Please contact Kian Boon directly if you have any queries</h4>
+  <div id="placeholder-content" class="container-fluid">
+    <h1 id="placeholder-title" class="placeholder-text">Page Under Construction</h1>
+    <h4 class="placeholder-text">Please contact Kian Boon directly if you have any queries</h4>
+  </div>
 </div>
-<!-- <div class="overlay"></div> -->
