--- a/src/app/placeholder/placeholder.component.css
+++ b/src/app/placeholder/placeholder.component.css
@@ -1,13 +1,23 @@
 #placeholder-container {
+    height: calc(100vh - 56px);
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    padding: 0;
     background-image: url('../../assets/img/material-placeholder.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+#placeholder-content {
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .placeholder-text {
@@ -15,6 +25,7 @@
     text-align: center;
     z-index: 3;
     opacity: 0.9;
+    padding: 0 16px;
 }
 
 #placeholder-title {
