--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-lg-9">
         <h1 class="display-1 page-header-title d-none d-sm-block">Experience</h1>
-        <h1 class="display-3 page-header-title d-sm-none">Experience</h1>
+        <h1 class="display-4 page-header-title d-sm-none">Experience</h1>
         <!-- <mat-card class="image-card">
           <img mat-card-image src="assets/img/material-placeholder.jpg" alt="placeholder">
         </mat-card> -->
@@ -18,7 +18,8 @@
     <div id="asia-risk-transfer-solutions" class="row item-container">
       <div class="col-lg-9">
         <div class="item-header">
-          <h1 class="display-4">Asia Risk Transfer Solutions, SG</h1>
+          <h1 class="display-4 d-none d-sm-block">Asia Risk Transfer Solutions, SG</h1>
+          <h1 class="lead d-sm-none company-name-sm">Asia Risk Transfer Solutions, SG</h1>
           <h4 class="lead company-role">Technology Analyst</h4>
           <p class="lead">Aug 2017 - Present</p>
         </div>
