refactor experience component styles

--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -1,5 +1,5 @@
 <div class="container page-container">
-  <div class="experience-header">
+  <div class="page-header">
     <div class="row">
       <div class="col-lg-9">
         <h1 class="display-1 page-header-title d-none d-sm-block">Experience</h1>
@@ -15,7 +15,7 @@
   <mat-divider></mat-divider>
 
   <div class="experience-body">
-    <div id="asia-risk-transfer-solutions" class="row item-container">
+    <div id="asia-risk-transfer-solutions" class="row page-item-container">
       <div class="col-lg-9">
         <div class="item-header">
           <h1 class="display-4 d-none d-sm-block">Asia Risk Transfer Solutions, SG</h1>
@@ -41,7 +41,7 @@
 
     <mat-divider></mat-divider>
 
-    <div id="codigo" class="row item-container">
+    <div id="codigo" class="row page-item-container">
       <div class="col-lg-9">
         <div class="item-header">
           <h1 class="display-4">Codigo, SG</h1>
@@ -64,7 +64,7 @@
 
     <mat-divider></mat-divider>
 
-    <div id="msd" class="row item-container">
+    <div id="msd" class="row page-item-container">
       <div class="col-lg-9">
         <div class="item-header">
           <h1 class="display-4">MSD, NJ</h1>
