--- a/src/app/shared/styles.css
+++ b/src/app/shared/styles.css
@@ -20,3 +20,26 @@ mat-card.image-card img.pad-image {
 .page-container {
     margin-bottom: 20px;
 }
+
+.page-header {
+    padding-top: 16px;
+    padding-bottom: 16px;
+}
+
+.page-item-container {
+    padding: 24px 0px;
+}
+
+.item-content {
+    text-align: justify;
+    letter-spacing: 0.03125rem;
+}
+
+.sub-item-container {
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+}
+
+.sub-title {
+    margin-bottom: 1rem;
+}
