implement personal info component

--- a/src/app/personal-info/personal-info.component.html
+++ b/src/app/personal-info/personal-info.component.html
@@ -1,3 +1,155 @@
-<p>
-  personal-info works!
-</p>
+<div class="container page-container">
+  <div class="page-header">
+    <div class="row">
+      <div class="col-lg-9">
+        <h1 class="display-1 page-header-title d-none d-sm-block">About Me</h1>
+        <h1 class="display-4 page-header-title d-sm-none">About Me</h1>
+      </div>
+    </div>
+  </div>
+
+  <mat-divider></mat-divider>
+
+  <div class="page-body">
+    <div class="row page-item-container">
+      <div class="col-lg-9">
+        <div class="row">
+          <div id="profile-picture-container" class="col-md-6">
+            <div id="profile-picture"></div>
+          </div>
+          <div class="col-md-6">
+            <p class="item-content lead" style="font-size: 2.5rem">Hi. I'm Ken!</p>
+            <p class="item-content">I'm a software developer who is passionate about using applications to enrich user experience. I enjoy designing
+              and building user-centric solutions that not only solves critical problems but also promotes software usability.
+            </p>
+            <p class="item-content">My expertise lies in web and mobile developement. I'm also a strong believer in quality software design, and
+              constantly seek to enhance my knowledge of software developement practices.
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <mat-divider></mat-divider>
+
+    <div class="row page-item-container">
+      <div class="col-lg-9">
+        <h1 class="display-4 sub-title">Education</h1>
+        <div class="row sub-item-container">
+          <div class="col-md-6">
+            <mat-card class="image-card">
+              <img mat-card-image src="assets/img/ntu.jpg" alt="ntu">
+            </mat-card>
+          </div>
+          <div class="col-md-6">
+            <div class="education-item-header">
+              <p class="lead">Nanyang Technological University, SG</p>
+              <p class="lead">2013 - 2018</p>
+            </div>
+            <p class="item-content">B.EngSc. in Computer Science</p>
+            <p class="item-content">M.Sc in Technology Management</p>
+            <p class="item-content">Cumulative GPA of 4.69 (out of 5.0)</p>
+          </div>
+        </div>
+        <mat-divider></mat-divider>
+        <div class="row sub-item-container flex-row-reverse">
+          <div class="col-md-6">
+            <mat-card class="image-card">
+              <img mat-card-image src="assets/img/ucb.jpg" alt="ucb">
+            </mat-card>
+          </div>
+          <div class="col-md-6">
+            <div class="education-item-header">
+              <p class="lead">University of California, Berkeley</p>
+              <p class="lead">2015 - 2016</p>
+            </div>
+            <p class="item-content">1 year exchange programme as a member of NTU's Renaissance Engineering Programme.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <mat-divider></mat-divider>
+
+    <div class="row page-item-container">
+      <div class="col-lg-9 ">
+        <h1 class="display-4 sub-title">Technical Skills</h1>
+        <div class="row">
+          <div class="col-sm-6">
+            <mat-card class="technical-skills-card">
+              <div class="technical-skills-header">
+                <div class="technical-skills-card-title">Languages</div>
+              </div>
+              <img mat-card-image src="assets/img/languages.jpg" alt="languages">
+              <mat-card-content>
+                <p>Java (Intermediate)</p>
+                <p>JavaScript/TypeScript (Intermediate)</p>
+                <p>HTML (Intermediate)</p>
+                <p>CSS (Intermediate)</p>
+              </mat-card-content>
+            </mat-card>
+            <mat-card class="technical-skills-card">
+              <div class="technical-skills-header">
+                <div class="technical-skills-card-title">Tools</div>
+              </div>
+              <img mat-card-image src="assets/img/tools.jpg" alt="tools">
+              <mat-card-content>
+                <p>Android Studio (Intermediate)</p>
+                <p>Git (Intermediate)</p>
+              </mat-card-content>
+            </mat-card>
+          </div>
+          <div class="col-sm-6">
+            <mat-card class="technical-skills-card">
+              <div class="technical-skills-header">
+                <div class="technical-skills-card-title">Frameworks</div>
+              </div>
+              <img mat-card-image src="assets/img/frameworks.jpg" alt="frameworks">
+              <mat-card-content>
+                <p>Angular (Intermediate)</p>
+                <p>Android (Intermediate)</p>
+                <p>Node.js (Intermediate)</p>
+              </mat-card-content>
+            </mat-card>
+            <mat-card class="technical-skills-card">
+              <div class="technical-skills-header">
+                <div class="technical-skills-card-title">Certifications</div>
+              </div>
+              <img mat-card-image src="assets/img/certifications.jpg" alt="certifications">
+              <mat-card-content>
+                <p>Udacity's "Developing Android Apps" course</p>
+              </mat-card-content>
+            </mat-card>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <mat-divider></mat-divider>
+
+  <div class="row page-item-container">
+    <div class="col-lg-9">
+      <h1 class="display-4 sub-title">Interests</h1>
+      <div id="interest-row" class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+          <div class="row">
+            <div class="col-sm-4 interest-container">
+              <i class="fas fa-gamepad fa-3x"></i>
+              <span class="lead interest-text">Gaming</span>
+            </div>
+            <div class="col-sm-4 interest-container">
+              <i class="fas fa-basketball-ball fa-3x"></i>
+              <span class="lead interest-text">Basketball</span>
+            </div>
+            <div class="col-sm-4 interest-container">
+              <i class="fas fa-walking fa-3x"></i>
+              <span class="lead interest-text">Running</span>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-2"></div>
+      </div>
+    </div>
+  </div>
+</div>
