--- a/src/app/personal-info/personal-info.component.html
+++ b/src/app/personal-info/personal-info.component.html
@@ -22,7 +22,7 @@
             <p class="item-content">I'm a software developer who is passionate about using applications to enrich user experience. I enjoy designing
               and building user-centric solutions that not only solves critical problems but also promotes software usability.
             </p>
-            <p class="item-content">My expertise lies in web and mobile developement. I'm also a strong believer in quality software design, and
+            <p class="item-content">My expertise lies in web and mobile development. I'm also a strong believer in quality software design, and
               constantly seek to enhance my knowledge of software developement practices.
           </div>
         </div>
