refactor code into page header component

--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -1,16 +1,5 @@
 <div class="container page-container">
-  <div class="page-header">
-    <div class="row">
-      <div class="col-lg-9">
-        <h1 class="display-1 page-header-title d-none d-sm-block">Experience</h1>
-        <h1 class="display-4 page-header-title d-sm-none">Experience</h1>
-        <!-- <mat-card class="image-card">
-          <img mat-card-image src="assets/img/material-placeholder.jpg" alt="placeholder">
-        </mat-card> -->
-      </div>
-      <!-- <div class="col-lg-3 d-none d-sm-block">Links to different list items</div> -->
-    </div>
-  </div>
+  <app-page-header [pageHeader]="'Experience'"></app-page-header>
 
   <mat-divider></mat-divider>
 
