--- a/src/app/personal-info/personal-info.component.html
+++ b/src/app/personal-info/personal-info.component.html
@@ -1,12 +1,5 @@
 <div class="container page-container">
-  <div class="page-header">
-    <div class="row">
-      <div class="col-lg-9">
-        <h1 class="display-1 page-header-title d-none d-sm-block">About Me</h1>
-        <h1 class="display-4 page-header-title d-sm-none">About Me</h1>
-      </div>
-    </div>
-  </div>
+  <app-page-header [pageHeader]="'About Me'"></app-page-header>
 
   <mat-divider></mat-divider>
 
