implement hiding and showing of top bar when scrolling

--- a/src/app/nav-top-bar/nav-top-bar.component.html
+++ b/src/app/nav-top-bar/nav-top-bar.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary">
+<mat-toolbar appScroll color="primary">
   <div id="logo-container">
     <mat-icon>face</mat-icon>
     <span class="logo-title">Ken's Material</span>
