--- a/src/app/nav-top-bar/nav-top-bar.component.css
+++ b/src/app/nav-top-bar/nav-top-bar.component.css
@@ -1,6 +1,18 @@
 mat-toolbar {
     justify-content: space-between;
     box-shadow: 0 2px 4px rgba(0,0,0,0.5);
+    position: sticky;
+    top: 0px;
+    z-index: 1;
+    transform: translateY(0);
+    opacity: 1;
+    transition: transform .3s cubic-bezier(.4,0,.2,1) .3s,opacity 0s .3s;
+}
+
+mat-toolbar.hide {
+    opacity: 0;
+    transform: translateY(-100%);
+    transition: transform .3s cubic-bezier(.4,0,.6,1),opacity 0s .3s;
 }
 
 #logo-container {
