implement page nav in achievements page

--- a/src/app/achievements/achievement/achievement.component.html
+++ b/src/app/achievements/achievement/achievement.component.html
@@ -1,4 +1,4 @@
-<div class="row page-item-container">
+<div class="row page-item-container" [id]="achievement.id">
   <div class="col-lg-9">
     <div class="item-header">
       <h1 class="display-4 d-none d-sm-block">{{ achievement.title }}</h1>
