--- a/src/app/achievements/achievements.component.html
+++ b/src/app/achievements/achievements.component.html
@@ -1,5 +1,5 @@
 <div class="container page-container">
-  <app-page-header [pageHeader]="'Achievements'"></app-page-header>
+  <app-page-header [pageHeader]="'Achievements'" [pageNavLinks]="achievementsNavItems"></app-page-header>
 
   <div *ngFor="let achievement of achievements">
     <mat-divider></mat-divider>
