implement page nav in experience page

--- a/src/app/experiences/experiences.component.html
+++ b/src/app/experiences/experiences.component.html
@@ -1,5 +1,5 @@
 <div class="container page-container">
-  <app-page-header [pageHeader]="'Experience'"></app-page-header>
+  <app-page-header [pageHeader]="'Experience'" [pageNavLinks]="experiencesNavItems"></app-page-header>
 
   <div *ngFor="let experience of experiences">
     <mat-divider></mat-divider>
