--- a/src/app/experiences/experience/experience.component.html
+++ b/src/app/experiences/experience/experience.component.html
@@ -1,4 +1,4 @@
-<div class="row page-item-container">
+<div class="row page-item-container" [id]="experience.companyId">
   <div class="col-lg-9">
     <div class="item-header">
       <h1 class="display-4 d-none d-sm-block">{{ experience.companyName }}</h1>
