--- a/src/app/achievements/achievement/achievement.component.html
+++ b/src/app/achievements/achievement/achievement.component.html
@@ -5,9 +5,7 @@
       <h1 class="lead d-sm-none company-name-sm">{{ achievement.title }}</h1>
       <p class="lead">{{ achievement.period }}</p>
     </div>
-    <mat-card class="image-card">
-      <img mat-card-image [src]="achievement.image.path" [alt]="achievement.image.alt" [ngClass]="{ 'pad-image' : achievement.image.isPadImage }">
-    </mat-card>
+    <app-image-card [image]="achievement.image"></app-image-card>
     <div class="item-content">
       <p *ngFor="let item of achievement.content">{{ item }}</p>
     </div>
